--- a/other/signature.html
+++ b/other/signature.html
@@ -1,4 +1,4 @@
-Kevin Cazelles <br/>
+Kevin Cazelles, PhD <br/>
 Post-doctoral researcher <br/>
 ---- <br/>
 <a href="https://www.mccannlab.org">McCann Lab</a> <br/>
