:art: review email signature

--- a/other/signature.html
+++ b/other/signature.html
@@ -1,12 +1,73 @@
+<hr width="28%" align="left">
+
+<link rel="stylesheet" href="https://kevcaz.github.io/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://kevcaz.github.io/css/academicons.min.css" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 Kevin Cazelles, PhD <br/>
 Post-doctoral researcher <br/>
----- <br/>
 <a href="https://www.mccannlab.org">McCann Lab</a> <br/>
-<a href="https://www.uoguelph.ca/ib/Departement">Department of Integrated Biology</a> <br/>
-University of Guelph<br/>
----- <br/>
-Website: <a href="https://kevcaz.github.io/">https://kevcaz.github.io/</a> <br/>
-Twitter: <a href="https://twitter.com/KCazelles">KCazelles</a> <br/>
-Github: <a href="https://github.com/KevCaz">KevCaz</a> <br/>
-Orcid: <a href="http://orcid.org/0000-0001-6619-9874">0000-0001-6619-9874</a>  <br/>
-<!-- <img src="file:///home/kevcaz/Documents/Administratif/Signatures/my_orcid_qrcode.png" height="128" width="128"></img> -->
+<a href="https://www.uoguelph.ca/ib/Departement">Department of Integrated Biology</a>  <br/>
+University of Guelph <br/>
+<a href="https://kevcaz.github.io/">https://kevcaz.github.io/</a> <br/><br/>
+<a href="http://orcid.org/0000-0001-6619-9874"><img src='https://kevcaz.github.io/img/orcid.png' height=28px /></a>&nbsp;
+<a href='https://www.researchgate.net/profile/Kevin_Cazelles'><img src='https://kevcaz.github.io/img/RG.png' height=28px /></a>&nbsp;
+<a href="https://twitter.com/KCazelles"><img src='https://kevcaz.github.io/img/Twitter_Bird.png' height=28px /></a>&nbsp;
+<a href="https://github.com/KevCaz"><img src='https://kevcaz.github.io/img/GitHub-Mark-64px.png'  height=28px /></a> <br/><br/>
+
+
+
+<!-- PCI -->
+<style type="text/css">
+  .tg {
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+  .tg td {
+    padding: 6px 4px;
+    overflow: hidden;
+  }
+  .tg th {
+    padding: 6px 4px;
+    overflow: hidden;
+  }
+  .tg .tg-0lax {
+    text-align: left;
+    vertical-align: middle;
+  }
+  .tg .tg-1lax {
+    text-align: center;
+    vertical-align: middle;
+  }
+</style>
+
+
+<table class="tg">
+  <tr>
+    <th class="tg-0lax" rowspan="3">
+      <img src='https://kevcaz.github.io/img/Logo_PCI.png' width = 220px/>
+    </th>
+    <th class="tg-0lax" colspan="2">
+      Why don't you join the next generation publishing experiment <br>
+      with "Peer Community In" - publish and read at no cost and <br>
+      inject more money into research!
+    </th>
+  </tr>
+  <tr>
+    <td class="tg-0lax" colspan="2">
+      PCI Website: <a href="https://peercommunityin.org">peercommunityin.org</a><br/>
+      Short video on PCI: <a href="https://youtu.be/4PZhpnc8wwo">https://youtu.be/4PZhpnc8wwo</a>
+    </td>
+  </tr>
+  <tr>
+    <td class="tg-1lax">
+      <a href="https://twitter.com/PeerCommunityIn"><img src='https://kevcaz.github.io/img/Twitter_Bird.svg' height=32px/></a>
+    </td>
+    <td class="tg-0lax">
+      @PCIEvolBiol, @PCI_Ecology, @PCI_Paleo <br>
+      @PCI_Genomics, @PC_Entomology, @PeerCommunityIn
+    </td>
+  </tr>
+  <tr>
+</table>
+
+<br>
